--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+.container {
+    display: grid;
+    grid-template-areas: 
+    "info game results"
+    "info game results"
+    "info game results";
+    padding: 40px 60px;
+}
+.game-info {
+    grid-area: info;
+}
+.game {
+    grid-area: game;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 500px;
+}
+.results {
+    grid-area: results;
+}
+
+
+
 .box {
     border: 1px solid black;
+    width: 160px;
+    height: 160px;
 }
