--- a/style/style.css
+++ b/style/style.css
@@ -151,7 +151,7 @@ p {
     -ms-grid-column: 1;
     grid-area: info;
     padding: 30px 50px 30px 0;
-    width: 350px;
+    width: 330px;
 }
 @media only screen and (max-width: 900px) {
     section.game-info,
@@ -161,6 +161,7 @@ p {
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        padding: 30px 0;
     }
     
 }
@@ -198,7 +199,7 @@ p {
     -ms-grid-row-span: 3;
     -ms-grid-column: 3;
     grid-area: results;
-    width: 350px;
+    width: 250px;
     padding: 30px;
 }
 
@@ -251,6 +252,11 @@ p {
     width: 100%;
     justify-content: space-between;
 }
+@media only screen and (max-width: 900px){
+    .players {
+        flex-wrap: nowrap;
+    }
+}
 
 input {
     background-color: rgb(54, 74, 86);
@@ -258,7 +264,7 @@ input {
     opacity: 0.8;
     border: 0;
     border-radius: 4px;
-    width: 43%;
+    width: 40%;
     padding: 20px 10px;
     margin-right: 20px;
     font-size: 16px;
