--- a/style/style.css
+++ b/style/style.css
@@ -232,6 +232,9 @@ p {
     transition: background-color 0.5s ease;
     cursor: pointer;
 }
+.cell:hover {
+    background-color: rgb(136 155 167 / 50%);
+}
 
 .clickedP1 {
     background-color: rgba(255, 121, 113,0.9);
@@ -305,9 +308,9 @@ input::placeholder {
 
 .player-info {
     font-size: 25px;
-    -webkit-transition: color 0.5s ease-in-out, font-size 0.5s ease-in-out;
-    -o-transition: color 0.5s ease-in-out, font-size 0.5s ease-in-out;
-    transition: color 0.5s ease-in-out, font-size 0.5s ease-in-out;
+    -webkit-transition: color 0.5s ease-in-out, font-size 1s ease-in-out;
+    -o-transition: color 0.5s ease-in-out, font-size 1s ease-in-out;
+    transition: color 0.5s ease-in-out, font-size 1s ease-in-out;
 }
 
 .winner-P1 {
