Add Light theme

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+/*Import */
 /*
 * Prefixed by https://autoprefixer.github.io
 * PostCSS: v8.3.6,
@@ -5,53 +6,38 @@
 * Browsers: last 4 version
 */
 
-/*Import */
 @import "./reset.css";
+@import "./light-theme.css";
+@import "./dark-theme.css";
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;600&display=swap');
+
 /* General classes/ Elements  */
 
 body {
-    background-color: #102532;
-    color: #c3c6c9;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
     padding: 80px 60px;
-    width: 1200px;
+    width: 70%;
     margin: 0 auto;
-
 }
-@media only screen and (max-width: 900px) {
-    .container {
-        grid-template-areas: 
-            "info info info"
-            "results results results"
-            "game game game"
-        ;
-        width: 90%;
-    }
-}
-@media only screen and (max-width: 1017px) and (min-width: 769px){
-    .container {
-        width: 80%!important;
-    }
-  }
-  
-  @media only screen and (max-width: 768px) and (min-width: 480px){
-    .container {
-        width: 80%!important;
-    }
-  }
-  
-  @media only screen and (max-width: 480px){
-    .container {
-        width: 80%!important;
-    }
-  }
 
+main.content {
+    display: flex;
+    justify-content: space-between;
+    position: relative;    
+    padding: 100px 0;
+}
+button#changeTheme {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+p.move {
+    font-size: 5rem;
+}
 
 .invisible {
     visibility: hidden;
@@ -66,9 +52,6 @@ body {
 }
 
 button {
-    border: 1px solid #c3c6c9;
-    background-color: transparent;
-    color: #c3c6c9;
     border-radius: 32px;
     padding: 15px 26px;
     margin-top: 20px;
@@ -80,13 +63,10 @@ button {
     -o-transition: 0.2s transform ease-in-out;
     transition: 0.2s transform ease-in-out;
     transition: 0.2s transform ease-in-out, 0.2s -webkit-transform ease-in-out;
-    will-change: transform;
     z-index: 0;
 }
 
 button::after {
-    background-color: #c3c6c9;
-    color: #102532;
     border-radius: 3rem;
     content: '';
     display: block;
@@ -104,7 +84,6 @@ button::after {
     -webkit-transition: .5s transform ease-out;
     -o-transition: .5s transform ease-out;
     transition: .5s transform ease-out;
-    will-change: transform;
     z-index: -1;
     -webkit-transition: visibility 0.5s;
     -o-transition: visibility 0.5s;
@@ -114,12 +93,10 @@ button::after {
 }
 
 button:hover {
-    border: 2px solid transparent;
-    color: #102532;
     -webkit-transform: scale(1.05);
         -ms-transform: scale(1.05);
             transform: scale(1.05);
-    will-change: transform;
+
 }
 
 button:hover::after {
@@ -210,7 +187,6 @@ p {
 
 
 .cell {
-    background-color: rgb(54, 74, 86);
     width: 30%;
     height: 30%;
     margin-bottom: 20px;
@@ -224,7 +200,6 @@ p {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    color: rgb(54, 74, 86);
     font-size: 6rem;
     font-weight: 600;
     -webkit-transition: background-color 0.5s ease;
@@ -232,25 +207,6 @@ p {
     transition: background-color 0.5s ease;
     cursor: pointer;
 }
-.cell:hover:not(.clickedP1,.clickedP2) {
-    background-color: rgb(136 155 167 / 50%);
-}
-
-.clickedP1 {
-    background-color: rgba(255, 121, 113,0.9);
-}
-
-.clickedP2 {
-    background-color: rgba(132, 200, 203,0.9);
-}
-
-.winner {
-    background-color: transparent;
-    color: #c3c6c9;
-    transition: background-color 0.5s ease-in, color 0.5s ease-in;
-}
-
-
 
 .players {
     display: -webkit-box;
@@ -268,9 +224,6 @@ p {
 }
 
 input {
-    background-color: rgb(54, 74, 86);
-    color: #c3c6c9;
-    opacity: 0.8;
     border: 0;
     border-radius: 4px;
     width: 30%;
@@ -285,29 +238,6 @@ input {
     }
 }
 
-input::-webkit-input-placeholder {
-    color: #c3c6c9;
-}
-
-input::-moz-placeholder {
-    color: #c3c6c9;
-}
-
-input:-ms-input-placeholder {
-    color: #c3c6c9;
-}
-
-input::-ms-input-placeholder {
-    color: #c3c6c9;
-}
-
-input::placeholder {
-    color: #c3c6c9;
-}
-
-
-
-
 .player-info {
     font-size: 25px;
     -webkit-transition: color 0.5s ease-in-out, font-size 1s ease-in-out;
@@ -315,15 +245,13 @@ input::placeholder {
     transition: color 0.5s ease-in-out, font-size 1s ease-in-out;
 }
 
-.winner-P1 {
-    color: rgba(255, 121, 113,0.9);
+.winnerP1 {
     font-size: 35px;
     text-transform: capitalize;
     font-weight: 900;
 }
 
-.winner-P2 {
-    color: rgba(132, 200, 203, 0.9);
+.winnerP2 {
     font-size: 35px;
     text-transform: capitalize;
     font-weight: 900;
